--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,32 +17,50 @@
         android:gravity="center"
         android:text="@string/login"
         android:textSize="35sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/purple_border"
+        android:padding="10dp"/>
 
-    <!-- Enter username -->
-
-    <EditText
-        android:id="@+id/usernameLogin"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="Username"
-        android:inputType="text" />
-
-    <!-- Enter Password -->
-    <EditText
-        android:id="@+id/passwordLogin"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="Password"
-        android:inputType="textPassword" />
-
-
-    <!-- Login Button -->
-    <Button
-        android:layout_marginTop="60dp"
-        android:id="@+id/buttonLogin"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:orientation="vertical"
+        android:background="@drawable/purple_border"
+        android:padding="10dp">
+
+
+        <!-- Enter username -->
+        <EditText
+            android:id="@+id/usernameLogin"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="Username"
+            android:inputType="text"
+            android:background="@drawable/white_background"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <!-- Enter Password -->
+        <EditText
+            android:id="@+id/passwordLogin"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:background="@drawable/white_background"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <!-- Login Button -->
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:text="Login" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
