added background that I need to change later and also tried to add functionality to button in sign up page didnt quite work, will do it later ~ido

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="@drawable/appBackground1">
 
 
     <!-- Page Title -->
