--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".LoginActivity"
-    android:background="@drawable/appBackground1">
+    android:background="@drawable/background1">
 
 
     <!-- Page Title -->
@@ -26,9 +25,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:background="@drawable/purple_border"
+        android:orientation="vertical"
         android:padding="20dp"
         >
 
@@ -38,75 +37,77 @@
             android:id="@+id/firstName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="FirstName"
-            android:inputType="text"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/firstname"
+            android:inputType="text"
+            android:padding="10dp" />
 
         <!-- Enter last name -->
         <EditText
             android:id="@+id/lastName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="LastName"
-            android:inputType="text"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/lastname"
+            android:inputType="text"
+            android:padding="10dp" />
 
         <!-- Enter username -->
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Username"
-            android:inputType="text"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/username"
+            android:inputType="text"
+            android:padding="10dp" />
 
         <!-- Enter email -->
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:padding="10dp" />
 
         <!-- Enter Password (First) -->
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Password"
-            android:inputType="textPassword"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <!-- Enter Password (Second) -->
         <EditText
             android:id="@+id/confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:hint="@string/confirm_password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <!-- SignUp Button -->
         <Button
             android:id="@+id/buttonSignUp"
-            android:layout_width="match_parent"
+            android:layout_width="376dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="SignUp"
-            />
+            android:layout_marginTop="40dp"
+            android:minHeight="48dp"
+            android:layout_gravity="center"
+
+            android:text="@string/buttonSignUp" />
 
     </LinearLayout>
 
