--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,60 +8,84 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".LoginActivity"
-    android:background="@drawable/background1">
+    android:background="@drawable/transition1"
+    android:id="@+id/linearLayout1">
 
 
     <!-- Page Title -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="150dp"
-        android:gravity="center"
-        android:text="@string/login"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        android:background="@drawable/purple_border"
-        android:padding="10dp"/>
-
     <LinearLayout
+        android:paddingTop="100sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/purple_border"
-        android:padding="10dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-
-        <!-- Enter username -->
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Username"
-            android:inputType="text"
-            android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
-
-        <!-- Enter Password -->
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:background="@drawable/white_background"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"/>
-
-        <!-- Login Button -->
-        <Button
-            android:id="@+id/buttonLogin"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="Login" />
+            android:layout_marginBottom="150dp"
+            android:gravity="center"
+            android:text="@string/login"
+            android:textSize="45sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="387dp"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+
+            <!-- Enter username -->
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/lightPink"
+                android:hint="Username"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textColorHint="@color/black" />
+
+            <!-- Enter Password -->
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/text_box"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textColorHint="@color/black" />
+
+
+
+            <Button
+                android:id="@+id/buttonForgotPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="20sp"
+                android:textSize="15sp"
+                android:text="@string/forgot_password" />
+
+            <Button
+                android:id="@+id/buttonRegisterANewUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/register_a_new_user" />
+
+            <!-- Login Button -->
+            <Button
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:text="Login" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
