--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,9 @@
     <style name="lineChart">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="fontFamily"></item>
+
+
+
     </style>
 </resources>
