--- a/app/src/main/res/layout/activity_graphing_calculator.xml
+++ b/app/src/main/res/layout/activity_graphing_calculator.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".graphingCalculator">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="@drawable/background1"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- The place where the graphical calculator will draw on -->
+    <com.example.desmosclonejavafirst.PlotView
+        android:layout_width="match_parent"
+        android:layout_height="603dp"
+        android:layout_gravity="center"
+        android:id = "@+id/plot_view"/>
+
+
+    <!-- Plot function button -->
+    <EditText
+        android:id="@+id/function_input"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/lightPink"
+        android:hint="Enter polynomial function"
+        android:inputType="text"
+        android:padding="10dp"
+        android:textColorHint="@color/black" />
+
+    <Button
+                android:id="@+id/plot_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Plot Function" />
+
+
+</LinearLayout>
