--- a/app/src/main/res/layout/activity_graphing_calculator.xml
+++ b/app/src/main/res/layout/activity_graphing_calculator.xml
@@ -11,7 +11,7 @@
     >
 
     <!-- The place where the graphical calculator will draw on -->
-    <com.example.desmosclonejavafirst.PlotView
+    <com.example.desmosclonejavafirst.plot_view.PlotView
         android:layout_width="match_parent"
         android:layout_height="603dp"
         android:layout_gravity="center"
