Everything is working in the tts and also the database now works, gotta add a bit more feautrues and then Style everything and then everything is good ~ido

--- a/app/src/main/res/layout/activity_explanation_for_polynomial_functions.xml
+++ b/app/src/main/res/layout/activity_explanation_for_polynomial_functions.xml
@@ -60,5 +60,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/explanationPart1" />
 
+    <Button
+        android:id="@+id/stop_tts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stop_tts_button"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
