added adding a profile picture functionality now only need to upload it to the firebase and everything is going to work ~idogut3

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -68,12 +68,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp">
 
-            <ProgressBar
-                android:id="@+id/forgetPasswordProgressbar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:visibility="invisible" />
+<!--            <ProgressBar-->
+<!--                android:id="@+id/forgetPasswordProgressbar"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_gravity="center_horizontal"-->
+<!--                android:visibility="visible"/>-->
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnReset"
