--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,28 +10,43 @@
 
 
     <!-- Page Title -->
+
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="88dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/purple_border"
         android:gravity="center"
+        android:padding="10dp"
         android:text="@string/SignUp"
         android:textSize="35sp"
-        android:textStyle="bold"
-        android:background="@drawable/purple_border"
-        android:padding="10dp"/>
-
+        android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="495dp"
+        android:layout_height="718dp"
         android:background="@drawable/purple_border"
         android:orientation="vertical"
-        android:padding="20dp"
-        >
+        android:paddingBottom="20dp">
 
 
+
+
+        <!-- ImageView for profile picture -->
+
+        <ImageView
+            android:id="@+id/imageProfilePicView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:clickable="true"
+            android:contentDescription="Profile Picture"
+            android:focusable="true"
+            android:paddingBottom="10dp"
+            android:src="@drawable/default_profile_picture" />
         <!-- Enter first name -->
         <EditText
             android:id="@+id/firstName"
@@ -103,9 +118,9 @@
             android:id="@+id/buttonSignUp"
             android:layout_width="376dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:minHeight="48dp"
-            android:layout_gravity="center"
 
             android:text="@string/buttonSignUp" />
 
