added log out button in main activity, working and started adding documintation~ido

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,13 @@
                 android:text="@string/goToGraphingCalculatorActivity"
                 android:textSize="15sp" />
 
+            <Button
+                android:id="@+id/buttonSignOut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_out"
+                android:textSize="15sp" />
+
         </LinearLayout>
 
     </LinearLayout>
